--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,62 @@ header {
   font-family: 'Cuprum', sans-serif;
 }
 
+/* The Modal (background)
+ * The code for the modal is adapted from
+ * https://www.w3schools.com/howto/howto_css_modals.asp
+ */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    line-height: 2em;
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 3em;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.win {
+  color: white;
+  font-weight: bold;
+  background-color: green;
+  padding: 0.25em;
+}
+
+.lose {
+  color: white;
+  font-weight: bold;
+  background-color: red;
+  padding: 0.25em;
+}
+
 #controls {
   clear: both;
 }
@@ -30,9 +86,10 @@ header {
   float: left;
 }
 
-#btnRestart {
+#btnRestart, #btnRules {
   float: right;
   font-size: 2em;
+  margin-left: 0.5em;
 }
 
 #result {
